--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,14 @@ jobs:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
+      
+    ## Customize dependencies
+    dependencies:
+ 
+
+  override:
+    - sudo ./gradlew dependencies
+    - sudo ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
     
     steps:
       - checkout
